@@ -47,7 +47,8 @@ Image* Image::loadPlatformResource(const char *name)
 {
     Vector<char> arr = loadResourceIntoArray(name);
     BitmapImage* img = new BitmapImage;
-    img->setNativeData(&arr, true);
+    RefPtr<SharedBuffer> buffer = new SharedBuffer(arr.data(), arr.size());
+    img->setData(buffer, true);
     return img;
 }
 
