@@ -1,3 +1,14 @@
+2007-03-15  Krzysztof Kowalczyk  <kkowalczyk@gmail.com>
+
+        Not reviewed - gdk build fixes.
+
+        * platform/gdk/EditorClientGdk.cpp:
+        (WebCore::EditorClientGdk::handleKeypress):
+        * platform/graphics/cairo/ImageSourceCairo.cpp:
+        (WebCore::ImageSource::setData):
+        * platform/graphics/gdk/ImageGdk.cpp:
+        (WebCore::Image::loadPlatformResource):
+
 2007-03-14  Justin Garcia  <justin.garcia@apple.com>
 
         Reviewed by john
